--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,6 +9,16 @@
         <div class="textBox">
             <input class="input is-normal" id="pin" type="text" placeholder="Pin Code">
             <input class="input is-normal" id="date" type="text" placeholder="Data in(dd-mm-yyyy)">
+            <div class="control">
+                <label class="radio">
+                  <input type="radio" name="answer">
+                  Min-Age 18
+                </label>
+                <label class="radio">
+                  <input type="radio" name="answer">
+                  Min-Age 45
+                </label>
+            </div>
             <span>
                 <button class="button is-info" type="submit"><i class="fa fa-search" style="font-size:20px"></i> Search</button>
             </span>
