--- a/views/home.ejs
+++ b/views/home.ejs
@@ -53,10 +53,8 @@
      
     <footer>
         <hr>
-        <p>Developed by Kshitiz Vikram Singh. Connect with me on--</p>
-        <p><i class="fa fa-github" style="font-size:24px"></i> <a href="https://github.com/kshitizchamp">Github/kshitiz</a> <i class="fa fa-twitter" style="font-size:24px"></i><a href="https://twitter.com/KshitizVikramSi">twitter/kshitiz</a></p>
-    </footer> 
-          
+        <p>Developed by Amdocs Open Network--</p>
+       </footer>       
       <script src="test.js"></script>  
 </body>
 
