Production Server deploy v1.0.1

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,11 +11,11 @@
             <input class="input is-normal" id="date" type="text" placeholder="Data in(dd-mm-yyyy)">
             <div class="control">
                 <label class="radio">
-                  <input type="radio" name="answer">
+                  <input type="radio" id="age-18" name="answer">
                   Min-Age 18
                 </label>
                 <label class="radio">
-                  <input type="radio" name="answer">
+                  <input type="radio" id="age-45" name="answer">
                   Min-Age 45
                 </label>
             </div>
